--- a/index.html
+++ b/index.html
@@ -5,10 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShoeStore®</title>
 
-    <link rel="icon" href="shoestore-favicon.svg" />
+    <link rel="icon" href="shoestore-favicon-1.svg" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
 
-  <body></body>
+  <body>
+    <div class="main-nav">
+      <header>
+        <svg class="nav-icon menu-search" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+          <path
+            d="M100-220.77v-60h391.15v60H100Zm0-195.77v-60h189.23v60H100Zm0-195.77v-60h189.23v60H100ZM817.85-220 663.08-373.62q-22.85 16.62-49.81 25.31-26.96 8.69-54.81 8.69-75.18 0-128.16-52.53-52.99-52.54-52.99-127.66 0-75.11 53.01-127.65Q483.34-700 558.55-700q75.22 0 128.14 52.54 52.92 52.54 52.92 127.46 0 27.85-8.69 54.81t-25.69 49.42L860-262.15 817.85-220ZM558.46-399.62q50.48 0 85.82-35 35.34-35 35.34-85.19T644.28-605q-35.34-35-85.82-35-50.48 0-85.82 35-35.33 35-35.33 85.19t35.33 85.19q35.34 35 85.82 35Z"
+          />
+        </svg>
+
+        <div class="primary-menu">
+          <ul>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">Kids</a></li>
+            <li><a href="#">Explore</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <a class="logo" href="index.html">
+            <img class="site-logo" src="images/shoestore-logo-main.svg" alt="shoe store logo" />
+          </a>
+        </div>
+
+        <nav class="secondary-menu">
+          <ul>
+            <li>
+              <a href="#"
+                ><svg class="nav-icon search" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+                  <path
+                    d="M781.69-136.92 530.46-388.16q-30 24.77-69 38.77-39 14-80.69 14-102.55 0-173.58-71.01-71.03-71.01-71.03-173.54 0-102.52 71.01-173.6 71.01-71.07 173.54-71.07 102.52 0 173.6 71.03 71.07 71.03 71.07 173.58 0 42.85-14.38 81.85-14.39 39-38.39 67.84l251.23 251.23-42.15 42.16ZM380.77-395.38q77.31 0 130.96-53.66 53.66-53.65 53.66-130.96t-53.66-130.96q-53.65-53.66-130.96-53.66t-130.96 53.66Q196.15-657.31 196.15-580t53.66 130.96q53.65 53.66 130.96 53.66Z"
+                  /></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="nav-icon account" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+                  <path
+                    d="M480-492.31q-57.75 0-98.87-41.12Q340-574.56 340-632.31q0-57.75 41.13-98.87 41.12-41.13 98.87-41.13 57.75 0 98.87 41.13Q620-690.06 620-632.31q0 57.75-41.13 98.88-41.12 41.12-98.87 41.12ZM180-187.69v-88.93q0-29.38 15.96-54.42 15.96-25.04 42.66-38.5 59.3-29.07 119.65-43.61 60.35-14.54 121.73-14.54t121.73 14.54q60.35 14.54 119.65 43.61 26.7 13.46 42.66 38.5Q780-306 780-276.62v88.93H180Zm60-60h480v-28.93q0-12.15-7.04-22.5-7.04-10.34-19.11-16.88-51.7-25.46-105.42-38.58Q534.7-367.69 480-367.69q-54.7 0-108.43 13.11-53.72 13.12-105.42 38.58-12.07 6.54-19.11 16.88-7.04 10.35-7.04 22.5v28.93Zm240-304.62q33 0 56.5-23.5t23.5-56.5q0-33-23.5-56.5t-56.5-23.5q-33 0-56.5 23.5t-23.5 56.5q0 33 23.5 56.5t56.5 23.5Zm0-80Zm0 384.62Z"
+                  /></svg
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><svg class="nav-icon shopping-cart" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+                  <path
+                    d="M252.31-100Q222-100 201-121q-21-21-21-51.31v-455.38Q180-658 201-679q21-21 51.31-21H330v-10q0-62.15 43.92-106.08Q417.85-860 480-860t106.08 43.92Q630-772.15 630-710v10h77.69Q738-700 759-679q21 21 21 51.31v455.38Q780-142 759-121q-21 21-51.31 21H252.31Zm0-60h455.38q4.62 0 8.46-3.85 3.85-3.84 3.85-8.46v-455.38q0-4.62-3.85-8.46-3.84-3.85-8.46-3.85H630v90q0 12.77-8.62 21.38Q612.77-520 600-520t-21.38-8.62Q570-537.23 570-550v-90H390v90q0 12.77-8.62 21.38Q372.77-520 360-520t-21.38-8.62Q330-537.23 330-550v-90h-77.69q-4.62 0-8.46 3.85-3.85 3.84-3.85 8.46v455.38q0 4.62 3.85 8.46 3.84 3.85 8.46 3.85ZM390-700h180v-10q0-37.61-26.19-63.81Q517.62-800 480-800q-37.62 0-63.81 26.19Q390-747.61 390-710v10ZM240-160v-480 480Z"
+                  /></svg
+              ></a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+  </body>
 </html>
