Added responsive sidebar for left menu

--- a/index.html
+++ b/index.html
@@ -13,37 +13,78 @@
   <body>
     <div class="main-nav">
       <header>
-        <svg class="nav-icon menu-search" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
-          <path
-            d="M100-220.77v-60h391.15v60H100Zm0-195.77v-60h189.23v60H100Zm0-195.77v-60h189.23v60H100ZM817.85-220 663.08-373.62q-22.85 16.62-49.81 25.31-26.96 8.69-54.81 8.69-75.18 0-128.16-52.53-52.99-52.54-52.99-127.66 0-75.11 53.01-127.65Q483.34-700 558.55-700q75.22 0 128.14 52.54 52.92 52.54 52.92 127.46 0 27.85-8.69 54.81t-25.69 49.42L860-262.15 817.85-220ZM558.46-399.62q50.48 0 85.82-35 35.34-35 35.34-85.19T644.28-605q-35.34-35-85.82-35-50.48 0-85.82 35-35.33 35-35.33 85.19t35.33 85.19q35.34 35 85.82 35Z"
-          />
-        </svg>
+        <input type="checkbox" id="left-sidebar-active" />
 
-        <div class="primary-menu">
-          <ul>
-            <li><a href="#">Men</a></li>
-            <li><a href="#">Women</a></li>
-            <li><a href="#">Kids</a></li>
-            <li><a href="#">Explore</a></li>
-          </ul>
-        </div>
+        <label for="left-sidebar-active" class="open-left-sidebar-button">
+          <svg class="nav-icon menu-search" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+            <path
+              d="M100-220.77v-60h391.15v60H100Zm0-195.77v-60h189.23v60H100Zm0-195.77v-60h189.23v60H100ZM817.85-220 663.08-373.62q-22.85 16.62-49.81 25.31-26.96 8.69-54.81 8.69-75.18 0-128.16-52.53-52.99-52.54-52.99-127.66 0-75.11 53.01-127.65Q483.34-700 558.55-700q75.22 0 128.14 52.54 52.92 52.54 52.92 127.46 0 27.85-8.69 54.81t-25.69 49.42L860-262.15 817.85-220ZM558.46-399.62q50.48 0 85.82-35 35.34-35 35.34-85.19T644.28-605q-35.34-35-85.82-35-50.48 0-85.82 35-35.33 35-35.33 85.19t35.33 85.19q35.34 35 85.82 35Z"
+            />
+          </svg>
+        </label>
 
-        <div>
-          <a class="logo" href="index.html">
-            <img class="site-logo" src="images/shoestore-logo-main.svg" alt="shoe store logo" />
-          </a>
-        </div>
+        <label id="overlay" for="left-sidebar-active"></label>
 
-        <nav class="secondary-menu">
-          <ul>
-            <li>
-              <a href="#"
-                ><svg class="nav-icon search" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+        <nav class="primary-menu">
+          <div class="primary-menu-header">
+            <label for="left-sidebar-active" class="close-left-sidebar-button">
+              <h2>Close</h2>
+              <svg class="nav-icon close" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+                <path d="M256-213.85 213.85-256l224-224-224-224L256-746.15l224 224 224-224L746.15-704l-224 224 224 224L704-213.85l-224-224-224 224Z" />
+              </svg>
+            </label>
+          </div>
+
+          <div class="primary-menu-content">
+            <ul>
+              <li>
+                <svg class="nav-icon search" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
                   <path
                     d="M781.69-136.92 530.46-388.16q-30 24.77-69 38.77-39 14-80.69 14-102.55 0-173.58-71.01-71.03-71.01-71.03-173.54 0-102.52 71.01-173.6 71.01-71.07 173.54-71.07 102.52 0 173.6 71.03 71.07 71.03 71.07 173.58 0 42.85-14.38 81.85-14.39 39-38.39 67.84l251.23 251.23-42.15 42.16ZM380.77-395.38q77.31 0 130.96-53.66 53.66-53.65 53.66-130.96t-53.66-130.96q-53.65-53.66-130.96-53.66t-130.96 53.66Q196.15-657.31 196.15-580t53.66 130.96q53.65 53.66 130.96 53.66Z"
+                  />
+                </svg>
+              </li>
+              <li><input type="search" name="left-sidebar-search" id="left-sidebar-search" placeholder="What are you looking for?" /></li>
+              <li><a href="#">Men</a></li>
+              <li><a href="#">Women</a></li>
+              <li><a href="#">Kids</a></li>
+              <li><a href="#">Explore</a></li>
+            </ul>
+
+            <ul class="hide-on-desktop-menu">
+              <li><a href="#" class="first-link-with-margin">My account</a></li>
+              <li><a href="#">Saved Items</a></li>
+              <li><a href="#">Language: English</a></li>
+              <li><a href="#" class="last-link-with-margin">Country / Region: United States</a></li>
+            </ul>
+
+            <div class="hide-on-desktop-icons">
+              <ul class="hide-on-desktop-icons-list">
+                <li><img src="images/icons/cc-visa.svg" alt="visa" title="Visa" /></li>
+                <li><img src="images/icons/cc-american-express.svg" alt="american express" title="American Express" /></li>
+                <li><img src="images/icons/cc-mastercard.svg" alt="mastercard" title="Mastercard" /></li>
+                <li><img src="images/icons/cc-paypal.svg" alt="paypal" title="PayPal" /></li>
+                <li><img src="images/icons/cc-applepay.svg" alt="apple pay" title="Apple Pay" /></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+        <a class="logo" href="index.html">
+          <img class="site-logo" src="images/shoestore-logo-main.svg" alt="shoestore logo" />
+        </a>
+
+        <div class="secondary-menu">
+          <ul>
+            <li>
+              <a href="#">
+                <svg class="nav-icon saved-items" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+                  <path
+                    d="M220-150v-597.69Q220-778 241-799q21-21 51.31-21h375.38Q698-820 719-799q21 21 21 51.31V-150L480-261.54 220-150Zm60-92 200-86 200 86v-505.69q0-4.62-3.85-8.46-3.84-3.85-8.46-3.85H292.31q-4.62 0-8.46 3.85-3.85 3.84-3.85 8.46V-242Zm0-518h400-400Z"
                   /></svg
               ></a>
             </li>
+
             <li>
               <a href="#">
                 <svg class="nav-icon account" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
@@ -52,6 +93,7 @@
                   /></svg
               ></a>
             </li>
+
             <li>
               <a href="#"
                 ><svg class="nav-icon shopping-cart" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000">
@@ -61,7 +103,7 @@
               ></a>
             </li>
           </ul>
-        </nav>
+        </div>
       </header>
     </div>
   </body>
