Added responsive homepage banner + changed Sass variables + added new font + updated readme.md

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ShoeStore®</title>
+    <title>Shoe Store® | Online Boutique</title>
 
     <link rel="icon" href="shoestore-favicon-1.svg" />
     <link rel="stylesheet" href="css/reset.css" />
@@ -113,6 +113,17 @@
           </ul>
         </div>
       </header>
+    </div>
+
+    <div class="main-content">
+      <div class="hero-image">
+        <div class="hero-content">
+          <h1>Women's Balenciaga Triple S "Cream"</h1>
+          <div>
+            <a href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
