Changed fonts and logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shoe Store® | Online Boutique</title>
 
-    <link rel="icon" href="shoestore-favicon-1.svg" />
+    <link rel="icon" href="shoe-store-favicon.svg" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -71,7 +71,7 @@
         </nav>
 
         <a class="logo" href="index.html">
-          <img class="site-logo" src="images/shoestore-logo-main.svg" alt="shoestore logo" />
+          <img class="site-logo" src="images/shoe-store-logo.svg" alt="shoestore logo" />
         </a>
 
         <div class="secondary-menu">
@@ -116,7 +116,7 @@
     </div>
 
     <div class="main-content">
-      <div class="hero-image">
+      <div class="hero-image first">
         <div class="hero-content">
           <h1>Women's Balenciaga Triple S "Cream"</h1>
           <div>
