--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </nav>
 
         <a class="logo" href="index.html">
-          <img class="site-logo" src="images/shoe-store-logo.svg" alt="shoestore logo" />
+          <img class="site-logo" src="images/shoe-store-logo-black.svg" alt="shoestore logo" />
         </a>
 
         <div class="secondary-menu">
