Added 3 new responsive homepage banners

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </svg>
         </label>
 
-        <label id="overlay" for="left-sidebar-active"></label>
+        <!-- <label id="overlay" for="left-sidebar-active"></label> -->
 
         <nav class="primary-menu">
           <div class="primary-menu-header">
@@ -118,7 +118,33 @@
     <div class="main-content">
       <div class="hero-image first">
         <div class="hero-content">
-          <h1>Women's Balenciaga Triple S "Cream"</h1>
+          <h1>Men's Balenciaga Triple S Canvas "Black"</h1>
+          <div>
+            <a href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="hero-image second">
+        <div class="hero-content">
+          <h1>Women's Balenciaga Paris Low Top "Black"</h1>
+          <div>
+            <a href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="hero-image third">
+        <div class="hero-content">
+          <h1>Men's Balenciaga Tractor Loafer "Black"</h1>
+          <div>
+            <a href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="hero-image fourth">
+        <div class="hero-content">
+          <h1>Women's Balenciaga Triple S Canvas "White"</h1>
           <div>
             <a href="#">Shop Now</a>
           </div>
