Changed icons in header and footer + updated readme.md + updated comments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shoe Store® | Online Boutique</title>
+    <title>Shoe Store | Online Boutique</title>
 
     <link rel="icon" href="shoe-store-favicon.svg" />
     <link rel="stylesheet" href="css/reset.css" />
@@ -297,9 +297,11 @@
           <script>
             document.write(new Date().getFullYear());
           </script>
-          Shoe Store®. All right reserved.
+          Shoe Store. All right reserved.
         </p>
       </div>
+
+      <div class="footer-whitespace"></div>
     </div>
   </body>
 </html>
