Added footer collapsible animation + changed font sizes in mobile menu and footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
 
-  <body>
+  <body class="body">
     <div class="main-nav">
       <header>
         <input type="checkbox" id="left-sidebar-active" />
