Added new variables + added new hero sections in home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
 
-  <body class="body">
+  <body>
+    <!-- ZAČIATOK: HEADER -->
     <div class="main-nav">
       <header>
         <input type="checkbox" id="left-sidebar-active" />
@@ -112,11 +113,13 @@
         </div>
       </header>
     </div>
+    <!-- KONIEC: HEADER -->
 
+    <!-- ZAČIATOK: HLAVNÝ OBSAH -->
     <div class="main-content">
       <div class="hero-image first">
         <div class="hero-content">
-          <h1>Men's Balenciaga Triple S Canvas "Black"</h1>
+          <h1>Men's Balenciaga Triple S Canvas in Black</h1>
           <div>
             <a href="#">Shop Now</a>
           </div>
@@ -125,31 +128,52 @@
 
       <div class="hero-image second">
         <div class="hero-content">
-          <h1>Women's Balenciaga Paris Low Top "Black"</h1>
+          <h1>Spring '25 Collection</h1>
           <div>
-            <a href="#">Shop Now</a>
+            <a href="#">Explore</a>
           </div>
         </div>
       </div>
 
       <div class="hero-image third">
         <div class="hero-content">
-          <h1>Kid's Balenciaga Track 2.0 Sneaker "Beige"</h1>
+          <h1>Women's Balenciaga Paris Mule in Blue</h1>
           <div>
             <a href="#">Shop Now</a>
           </div>
         </div>
       </div>
+
       <div class="hero-image fourth">
         <div class="hero-content">
-          <h1 class="heading-explore">Summer '25 Show</h1>
+          <h1 class="heading-explore">Spring '25 Collection</h1>
+          <div>
+            <a href="#">Explore</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="hero-image fifth">
+        <div class="hero-content">
+          <h1>Kid's Balenciaga Track 2.0 Sneaker in Beige</h1>
+          <div>
+            <a href="#">Shop Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="hero-image sixth">
+        <div class="hero-content">
+          <h1 class="heading-explore">Spring '25 Show</h1>
           <div>
             <a href="#">Explore</a>
           </div>
         </div>
       </div>
     </div>
+    <!-- KONIEC: HLAVNÝ OBSAH -->
 
+    <!-- ZAČIATOK: FOOTER -->
     <div class="site-footer">
       <div class="footer-content-desktop">
         <div class="box-1">
@@ -303,5 +327,6 @@
 
       <div class="footer-whitespace"></div>
     </div>
+    <!-- KONIEC: FOOTER -->
   </body>
 </html>
