Changed site name, favicon and logo + changed hero sections headings

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shoe Store | Online Boutique</title>
+    <title>Prestige | Online Boutique</title>
 
-    <link rel="icon" href="shoe-store-favicon.svg" />
+    <link rel="icon" href="prestige-favicon.svg" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
@@ -70,7 +70,7 @@
         </nav>
 
         <a class="logo" href="index.html">
-          <img class="site-logo" src="images/shoe-store-logo-black.svg" alt="shoestore logo" />
+          <img class="site-logo" src="images/prestige-logo.svg" alt="prestige logo" />
         </a>
 
         <div class="secondary-menu">
@@ -128,9 +128,9 @@
 
       <div class="hero-image second">
         <div class="hero-content">
-          <h1>Spring '25 Collection</h1>
+          <h1>Men's Not Been Done T-shirt Oversized in Black</h1>
           <div>
-            <a href="#">Explore</a>
+            <a href="#">Shop Now</a>
           </div>
         </div>
       </div>
@@ -146,9 +146,9 @@
 
       <div class="hero-image fourth">
         <div class="hero-content">
-          <h1 class="heading-explore">Spring '25 Collection</h1>
+          <h1 class="heading-explore">Women's Balenciaga Bel Air Carry All Bag in Black</h1>
           <div>
-            <a href="#">Explore</a>
+            <a href="#">Shop Now</a>
           </div>
         </div>
       </div>
@@ -321,7 +321,7 @@
           <script>
             document.write(new Date().getFullYear());
           </script>
-          Shoe Store. All right reserved.
+          Prestige. All right reserved.
         </p>
       </div>
 
