Changed site logo

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </svg>
               </li>
               <li><input type="search" name="left-sidebar-search" id="left-sidebar-search" placeholder="What are you looking for?" /></li>
-              <li><a href="#">Men</a></li>
               <li><a href="#">Women</a></li>
+              <li><a href="#">Men</a></li>
               <li><a href="#">Kids</a></li>
               <li><a href="#">Explore</a></li>
             </ul>
@@ -146,7 +146,7 @@
 
       <div class="hero-image fourth">
         <div class="hero-content">
-          <h1 class="heading-explore">Women's Balenciaga Bel Air Carry All Bag in Black</h1>
+          <h1 class="white-heading">Women's Balenciaga Bel Air Carry All Bag in Black</h1>
           <div>
             <a href="#">Shop Now</a>
           </div>
@@ -164,7 +164,7 @@
 
       <div class="hero-image sixth">
         <div class="hero-content">
-          <h1 class="heading-explore">Spring '25 Show</h1>
+          <h1 class="white-heading">Spring '25 Show</h1>
           <div>
             <a href="#">Explore</a>
           </div>
@@ -328,5 +328,8 @@
       <div class="footer-whitespace"></div>
     </div>
     <!-- KONIEC: FOOTER -->
+
+    <!-- JAVASCRIPT -->
+    <script src="js/script.js"></script>
   </body>
 </html>
