Changed main navigation links + updated hero sections in home page

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
               <li><input type="search" name="left-sidebar-search" id="left-sidebar-search" placeholder="What are you looking for?" /></li>
               <li><a href="#">Women</a></li>
               <li><a href="#">Men</a></li>
-              <li><a href="#">Kids</a></li>
-              <li><a href="#">Explore</a></li>
+              <li><a href="#">Jewelry</a></li>
+              <li>
+                <a href="#">52<span class="small-text">nd</span> Collection</a>
+              </li>
             </ul>
 
             <ul class="hide-on-desktop-menu">
@@ -119,25 +121,26 @@
     <div class="main-content">
       <div class="hero-image first">
         <div class="hero-content">
-          <h1>Men's Balenciaga Triple S Canvas in Black</h1>
-          <div>
-            <a href="#">Shop Now</a>
+          <h1>Spring 2025</h1>
+          <div class="two-buttons">
+            <a href="#">For Women</a>
+            <a href="#">For Men</a>
           </div>
         </div>
       </div>
 
       <div class="hero-image second">
         <div class="hero-content">
-          <h1>Men's Not Been Done T-shirt Oversized in Black</h1>
+          <h1 class="white-heading">Jewelry</h1>
           <div>
-            <a href="#">Shop Now</a>
+            <a class="white-button" href="#">Shop Now</a>
           </div>
         </div>
       </div>
 
       <div class="hero-image third">
         <div class="hero-content">
-          <h1>Women's Balenciaga Paris Mule in Blue</h1>
+          <h1>Crush Chain Hobo Bag Quilted</h1>
           <div>
             <a href="#">Shop Now</a>
           </div>
@@ -146,27 +149,9 @@
 
       <div class="hero-image fourth">
         <div class="hero-content">
-          <h1 class="white-heading">Women's Balenciaga Bel Air Carry All Bag in Black</h1>
+          <h1 class="white-heading">52<span class="small-text">nd</span> Collection</h1>
           <div>
-            <a href="#">Shop Now</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="hero-image fifth">
-        <div class="hero-content">
-          <h1>Kid's Balenciaga Track 2.0 Sneaker in Beige</h1>
-          <div>
-            <a href="#">Shop Now</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="hero-image sixth">
-        <div class="hero-content">
-          <h1 class="white-heading">Spring '25 Show</h1>
-          <div>
-            <a href="#">Explore</a>
+            <a class="white-button" href="#">Explore</a>
           </div>
         </div>
       </div>
@@ -328,8 +313,5 @@
       <div class="footer-whitespace"></div>
     </div>
     <!-- KONIEC: FOOTER -->
-
-    <!-- JAVASCRIPT -->
-    <script src="js/script.js"></script>
   </body>
 </html>
