Added new banner under site header

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
 
     <!-- ZAČIATOK: HLAVNÝ OBSAH -->
     <div class="main-content">
+      <div class="slider" aria-hidden="true">
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+        <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
+      </div>
+
       <div class="hero-image first">
         <div class="hero-content">
           <h1>Spring 2025</h1>
