Changed a links to span links in homepage + changed speed of banner with moving text

--- a/index.html
+++ b/index.html
@@ -127,42 +127,50 @@
         <p>Complimentary Shipping on All Products | 15% Off Everything When You Spend €150 +</p>
       </div>
 
-      <div class="hero-image first">
-        <div class="hero-content">
-          <h1>Spring 2025</h1>
-          <div class="two-buttons">
-            <a href="#">For Women</a>
-            <a href="#">For Men</a>
+      <a href="index.html">
+        <div class="hero-image first">
+          <div class="hero-content">
+            <h1>Spring 2025</h1>
+            <div class="two-buttons">
+              <span class="homepage-button">For Women</span>
+              <span class="homepage-button">For Men</span>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="hero-image second">
-        <div class="hero-content">
-          <h1 class="white-heading">Jewelry</h1>
-          <div>
-            <a class="white-button" href="#">Shop Now</a>
+      <a href="index.html">
+        <div class="hero-image second">
+          <div class="hero-content">
+            <h1 class="white-heading">Jewelry</h1>
+            <div>
+              <span class="homepage-button white-button">Shop Now</span>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="hero-image third">
-        <div class="hero-content">
-          <h1>Crush Chain Hobo Bag Quilted</h1>
-          <div>
-            <a href="#">Shop Now</a>
+      <a href="index.html">
+        <div class="hero-image third">
+          <div class="hero-content">
+            <h1>Crush Chain Hobo Bag Quilted</h1>
+            <div>
+              <span class="homepage-button">Shop Now</span>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="hero-image fourth">
-        <div class="hero-content">
-          <h1 class="white-heading">52<span class="small-text">nd</span> Collection</h1>
-          <div>
-            <a class="white-button" href="#">Explore</a>
+      <a href="index.html">
+        <div class="hero-image fourth">
+          <div class="hero-content">
+            <h1 class="white-heading">52<span class="small-text">nd</span> Collection</h1>
+            <div>
+              <span class="homepage-button white-button">Explore</span>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
     </div>
     <!-- KONIEC: HLAVNÝ OBSAH -->
 
